--- a/css/body.css
+++ b/css/body.css
@@ -16,4 +16,5 @@ body {
     width: 100v%;
     z-index: -10;
     background-color: var(--primary-color);
+    animation: slideUp 0.6s ease forwards;
 }
