--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@
 
 .navbar {
     background-color: var(--primary-color);
-    position: relative;
+    position: fixed;
     width: 100vw;
     left: 0;
     display: inline;
