--- a/css/header.css
+++ b/css/header.css
@@ -26,6 +26,7 @@
     padding: 20px;
     text-decoration: none;
     font-size: 20px;
+    transition: background-color 0.1s;
 }
 
 .navbar a:hover {
@@ -85,6 +86,8 @@
     background-color: var(--primary-color);
     position: relative;
     left: 20vw;
+    transition: 0.1s;
+    transition-delay: calc(60ms * var(--delay));
 }
 
 .dropdown-content li a {
@@ -93,6 +96,7 @@
     color: var(--text-color);
     text-decoration: none;
     width: 100%;
+    transition: 0.1s;
 } 
            
 .dropdown:hover .dropdown-content {
