--- a/css/frame.css
+++ b/css/frame.css
@@ -88,7 +88,7 @@ hr {
   z-index: 2;
   position: relative;
   width: 100%;
-  background-color: #34495E;
+  background-color: ##25274d
   min-width: 300px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
