--- a/css/frame.css
+++ b/css/frame.css
@@ -290,7 +290,7 @@ hr {
   font-weight: 300;
   line-height: 1.5;
   overflow-x: auto;
-  background-color: #34495E;
+  background-color: #212F3C;
   display: flex;
 }
 
