--- a/css/frame.css
+++ b/css/frame.css
@@ -88,7 +88,7 @@ hr {
   z-index: 2;
   position: relative;
   width: 100%;
-  background-color: ##25274d
+  background-color: ##25274d;
   min-width: 300px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -290,7 +290,7 @@ hr {
   font-weight: 300;
   line-height: 1.5;
   overflow-x: auto;
-  background-color: #212F3C;
+  background-color: #25274d;
   display: flex;
 }
 
