--- a/css/frame.css
+++ b/css/frame.css
@@ -1,5 +1,3 @@
-
-
 html,
 body {
   margin: 0;
@@ -1407,6 +1405,7 @@ ol.nested>li:before {
   .logo {
     -webkit-tap-highlight-color: transparent;
   }
+}
 
   .menu .menu-button {
     display: flex;
