--- a/css/frame.css
+++ b/css/frame.css
@@ -2,7 +2,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #464866, #AAABB8, #2E9CCA, #29648A);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
