--- a/css/frame.css
+++ b/css/frame.css
@@ -43,7 +43,7 @@ video {
 
 h1 {
   font-size: 30px;
-  color: #333333;
+  color: #37373b;
   margin: 30px 0 0 0;
   padding: 0;
   font-weight: bold;
@@ -52,7 +52,7 @@ h1 {
 
 h2 {
   font-size: 24px;
-  color: #ffffff;
+  color: #37373b;
   margin: 30px 0 0 0;
   padding: 0;
   font-weight: bold;
@@ -61,7 +61,7 @@ h2 {
 
 h3 {
   font-size: 18px;
-  color: #333333;
+  color: #37373b;
   margin: 10px 0 0 0;
   padding: 0;
   font-weight: bold;
