--- a/css/frame.css
+++ b/css/frame.css
@@ -813,7 +813,7 @@ h3 {
 				justify-content: center;
 				position: absolute;
 				top: 0;
-				left: 0;
+				left: -15px;
 				width: 100%;
 				height: 100%;
 				padding: 1em;
